# sbom-audit

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sbom_audit/: cli.py
sbom_audit/core/: cra_mapping.py  license_lookup.py  manifest_parser.py  models.py  provenance_check.py  provenance_verify.py  sbom_generator.py  vuln_check.py
sbom_audit/reports/: cra_report.py  provenance_report.py  sarif_report.py  terminal.py
tests/: test_sbom_audit.py
tests/fixtures/: npm_slsa_bundle.json
