[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-audit"
version = "0.1.0"
description = "SBOM generation & dependency vulnerability scanning"
requires-python = ">=3.11"
dependencies = ["click>=8.1.0", "rich>=13.7.0"]

[project.scripts]
sbom-audit = "sbom_audit.cli:main"

[tool.setuptools.packages.find]
include = ["sbom_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
